@@ -79,14 +79,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
-                <configuration>
-                    <argLine>
-                        --add-opens javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
-                        --add-exports javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
-                        --add-modules javafx.controls,javafx.fxml
-                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
